testing scrolling issue on mobile phones

--- a/src/App.css
+++ b/src/App.css
@@ -211,8 +211,11 @@ textarea::-webkit-scrollbar {
   max-width: 25rem;
 }
 
-.scrollable {
-  position: fixed;
-  width: 100%;
-  overflow: hidden;
+#scrollable {
+  /* position: fixed !important; */
+  /* width: 100%; */
+  overflow-y: hidden !important;
+  /* bottom: 0 !important;
+  left: 0 !important;
+  right: 0 !important; */
 }
